--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^5.2.1",
     "react-reveal": "^1.2.2",
     "react-tilt": "^0.1.4",
+    "typewriter-effect": "^2.13.1",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
